Update VariantFactory.createVariantEvaluations() not to take an argument Update GenomeAnalysisService to no longer extend VariantFactory but return a VariantAnnotator Add VcfReader to VariantFactoryImpl constructor args